# synth-data-pipeline

./: .env.example  .gitignore  .gitmessage  README.md  pyproject.toml
configs/: linkedin_cringe_prod.toml
configs/examples/: linkedin_cringe.toml  linkedin_cringe_open.toml
scripts/: example_usage.py
src/synth_data_pipeline/: __init__.py  cli.py  pipeline.py
src/synth_data_pipeline/generators/: __init__.py  anthropic_generator.py  base.py  gemini_generator.py  openai_generator.py  outlines_generator.py
src/synth_data_pipeline/judges/: __init__.py  base.py  ensemble_judge.py  llm_judge.py  pairwise_judge.py  prometheus_judge.py
src/synth_data_pipeline/processors/: __init__.py  calibrator.py  cleaner.py  data_splitter.py  deduplicator.py  label_triager.py  validator.py
src/synth_data_pipeline/utils/: generation_sampler.py
tests/: test_generation_sampler.py  test_generators.py
